[project]
name = "lecture-6"
version = "0.1.0"
description = ""
authors = [
    {name = "KATTSS",email = "katsyarynnks@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.104.0)",
    "uvicorn (>=0.24.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
